# github-dependents-info

./: .bandit.yml  .cspell.json  .gitignore  .jscpd.json  .lycheeignore  .mega-linter.yml  .pre-commit-config.yaml  .pylintrc  .ruff.toml  .safety-policy.yml  .safety-project.ini  .trivyignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  action.yml  cookiecutter-config-file.yml  pyproject.toml  renovate.json  requirements.txt  test.md
.claude/agents/: pr-monitor.md
.claude/skills/analyze/: SKILL.md
.claude/skills/design/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/pr-watch-fix/: SKILL.md
.claude/skills/test/: SKILL.md
.github/: .stale.yml  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/linters/: .checkov.yml
.github/workflows/: build.yml  demo.yml  github-dependents-info.yml  greetings.yml  mega-linter.yml  release.yml  test-release-docker.yml
assets/: angular-package-usage.md  markdown-demo-2.md  markdown-demo.md
docker/: Dockerfile  README.md
docs/: github-dependents-info.md
github_dependents_info/: __init__.py  __main__.py  gh_dependents_info.py
tests/: test_cli.py
tests/test_example/: test_hello.py
tests/test_gh_dependents_info/: test_gh_dependents_info.py
