# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "github-dependents-info"
version = "1.5.0"
description = "Collect information about dependencies between a github repo and other repositories. Results available in JSON, markdown and badges."
readme = "README.md"
authors = ["nvuillam <nicolas.vuillamy@gmail.com>"]
license = "MIT"
repository = "https://github.com/nvuillam/github-dependents-info"
homepage = "https://github.com/nvuillam/github-dependents-info"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = ["github","dependent","used-by","repository","stats","dependencies","using"]  #! Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"github-dependents-info" = "github_dependents_info.__main__:app"

[tool.poetry.dependencies]
python = "^3.9"

typer = {extras = ["all"], version = ">=0.4,<0.10"}
rich = ">=12.6,<14.0"
beautifulsoup4 = "4.12.2"
pandas = "^2.0.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.5"
black = {version = "^22.12.0", allow-prereleases = true}
darglint = "^1.8.1"
isort = {extras = ["colors"], version = "^5.13.2"}
mypy = "^1.8"
mypy-extensions = "^1.0.0"
pre-commit = "^3.6.0"
pydocstyle = "^6.3.0"
pylint = "^3.0.0"
pytest = "^7.3.1"
pyupgrade = "^3.4.0"
safety = "^2.3.5"
coverage = "^7.3.4"
coverage-badge = "^1.1.0"
pytest-html = "^4.1.1"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
darglint = "^1.8.1"
isort = {extras = ["colors"], version = "^5.12.0"}
mypy = "^1.3"
pre-commit = ">=2.20,<4.0"
pydocstyle = "^6.3.0"
pylint = "^3.0.0"
pytest = "^7.3.1"
pyupgrade = "^3.4.0"
safety = "^2.3.5"
coverage = ">=6.5,<8.0"
coverage-badge = "^1.1.0"
pytest-html = ">=3.2,<5.0"
pytest-cov = "^4.0.0"

[tool.black]
# https://github.com/psf/black
target-version = ["py39"]
line-length = 120
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 39
line_length = 120

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.9
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "github-dependents-info"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true
